# ShortCell

./: .gitignore  README.md
Software/: CMakeLists.txt
Software/Application/: CCell.cpp  CCell.h  CCellDatabase.cpp  CCellDatabase.h  CMakeLists.txt  CTemplateDatabase.h  main.cpp
Software/CMake/: VisualStudio2017_64bit.cmd  VisualStudio_general.cmd
Software/CMake/Import/: ImportQt5.cmake
Software/CMake/Macros/: CMakeMacros.cmake  GenerateExportHeader.cmake  PrecompiledHeaders.cmake  exportheader.cmake.in
Software/CMake/Settings/: CMakeSettings.cmake
